fix: improve collapse interactive behavior

--- a/src/components/collapse/style.scss
+++ b/src/components/collapse/style.scss
@@ -10,6 +10,8 @@
 
     #{$rcCollapse} {
         background-color: inherit;
+        display: flex;
+        flex-direction: column;
         height: 100%;
 
         &-anim-active {
@@ -20,8 +22,11 @@
             border-bottom: 1px solid var(--sideBarSectionHeader-border);
 
             &-active {
-                display: flex;
-                flex-direction: column;
+                overflow: hidden;
+
+                &:not(.empty) {
+                    flex: 1;
+                }
 
                 &:hover {
                     #{$collapse}__content--toolbar {
@@ -34,6 +39,14 @@
                 border-bottom-color: transparent;
                 #{$rcCollapse}-content {
                     border-radius: 0 0 3px 3px;
+                }
+            }
+
+            // empty content do not unfold
+            &.empty {
+                #{$rcCollapse}-content {
+                    height: 0;
+                    min-height: 0;
                 }
             }
         }
@@ -75,12 +88,21 @@
             }
 
             #{$actionBar}__label.codicon {
+                color: var(--activityBar-inactiveForeground);
                 height: inherit;
                 line-height: inherit;
+
+                &:hover {
+                    color: var(--activityBar-activeBorder);
+                }
             }
         }
 
         &-content {
+            // transition do not support a non-specific value like auto、100% and so on
+            // TODO: so set a specific value just for height transition
+            height: 500px;
+            min-height: calc(100% - 24px);
             overflow: auto;
 
             &-box {
